--- a/app/views/public/user_papers/show.html.erb
+++ b/app/views/public/user_papers/show.html.erb
@@ -12,9 +12,14 @@
     <div class="content-title col-10">
       <h3 class="content-title-name"><%= @paper.title %></h3>
     </div>
-    <% if user_signed_in? && @user.id == current_user.id%>
-      <%= link_to "編集", edit_public_user_user_paper_path(@user.login_id, @paper.id), class:"btn btn-primary content-title-btn" %>
-    <% end %>
+    
+    <div>
+      <%= render "shared/favorite", type: "Paper", deliverable: @paper %>
+      <% if user_signed_in? && @user.id == current_user.id%>
+        <%= link_to "編集", edit_public_user_user_paper_path(@user.login_id, @paper.id), class:"btn btn-primary content-title-btn" %>
+      <% end %>
+    </div>
+
   </div>
 
   <!--Main-->
