--- a/app/views/public/users/tips/mypage/_search.html.erb
+++ b/app/views/public/users/tips/mypage/_search.html.erb
@@ -8,22 +8,22 @@
                     <h6 class="nav-links s-content">Category :</h6>
                   </li>
                   <li class="nav-item">
-                      <a class="nav-links badge badge-info" href="#laboratory" data-toggle="tab">Laboratory</a>
+                      <a class="nav-links item-badge badge badge-info" href="#laboratory" data-toggle="tab">Laboratory</a>
                   </li>
                   <li class="nav-item">
-                      <a class="nav-links badge badge-default" href="#company" data-toggle="tab">Company</a>
+                      <a class="nav-links item-badge badge badge-default" href="#company" data-toggle="tab">Company</a>
                   </li>
                   <li class="nav-item">
-                      <a class="nav-links badge badge-default" href="#paper" data-toggle="tab">Paper</a>
+                      <a class="nav-links item-badge badge badge-default" href="#paper" data-toggle="tab">Paper</a>
                   </li>
                   <li class="nav-item">
-                      <a class="nav-links badge badge-default" href="#confernce" data-toggle="tab">Confernce</a>
+                      <a class="nav-links item-badge badge badge-default" href="#confernce" data-toggle="tab">Confernce</a>
                   </li>
                   <li class="nav-item">
-                      <a class="nav-links badge badge-default" href="#book" data-toggle="tab">book</a>
+                      <a class="nav-links item-badge badge badge-default" href="#book" data-toggle="tab">book</a>
                   </li>
                   <li class="nav-item">
-                      <a class="nav-links badge badge-default" href="#event" data-toggle="tab">event</a>
+                      <a class="nav-links item-badge badge badge-default" href="#event" data-toggle="tab">event</a>
                   </li>
               </ul>
           </div>
@@ -55,11 +55,11 @@
 
 <script>
   $(function(){
-  $(".badge").on("click", function() {
+  $(".item-badge").on("click", function() {
   $(this).toggleClass("badge-info");
   $(this).removeClass('badge-default')
-  $('.badge').not(this).removeClass('badge-info');
-  $('.badge').not(this).addClass('badge-default');
+  $('.item-badge').not(this).removeClass('badge-info');
+  $('.item-badge').not(this).addClass('badge-default');
   });
   });
 </script>
