--- a/app/views/public/users/tips/show/_books.html.erb
+++ b/app/views/public/users/tips/show/_books.html.erb
@@ -1,6 +1,6 @@
 <div class="col-12 user-books between-type baseline-content">
   <div class="flex-type">
-    <i class="far fa-2x fa-copy book-icon"></i>
+    <i class="fas fa-book fa-2x book-icon"></i>
     <h3>book</h3>
   </div>
   <%= link_to "book 一覧", public_user_user_books_path(@user.login_id), class:"rss-register-link" %>
