--- a/app/views/public/users/tips/show/_presentations.html.erb
+++ b/app/views/public/users/tips/show/_presentations.html.erb
@@ -1,6 +1,6 @@
-<div class="col-12 user-confernces between-type baseline-content">
+<div class="col-12 user-confernces between-type baseline-content user-papers">
   <div class="flex-type">
-    <i class="far fa-2x fa-copy confernce-icon"></i>
+    <i class="fas fa-chalkboard fa-2x paper-icon"></i>
     <h3>Confernce</h3>
   </div>
   <%= link_to "confernce 一覧", public_user_user_confernces_path(@user.login_id), class:"rss-register-link" %>
